assets/css/lcd/subway_status.scss
@use "CSS/colors";
@use "CSS/lcd/section_header";

// Note: These styles are closely tied to some display logic in the component, so they may need to change together

.subway-status {
  width: 1080px;
  height: 640px;
  overflow: hidden;
  color: colors.$cool-black-15;
  background: colors.$warm-neutral-90;
}

.subway-status__header {
  @include section_header.base;

  margin-bottom: 6px;
}

.subway-status__normal-service {
  position: relative;
}

.subway-status__normal-service-icon {
  position: absolute;
  top: 50px;
  left: 48px;
}

.subway-status__normal-service-text {
  position: absolute;
  top: 249px;
  left: 48px;
  font-size: 66px;
  font-weight: 400;
}

.subway-status__line {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 24px;
  padding: 24px 24px 24px 48px;

  &:not(:last-child)::after {
    position: absolute;
    right: 24px;
    bottom: 0;
    left: 200px;
    height: 4px;
    content: "";
    background: colors.$warm-neutral-80;
    border-radius: 2px;
  }
}

.subway-status__alert {
  display: flex;
  gap: 16px;
  overflow: hidden;
  white-space: nowrap;
}

.subway-status__pill-container {
  min-width: 136px;
}

.subway-status__text-container {
  display: flex;
  gap: 16px;
  align-items: baseline;
  margin-top: 8px;

  &--extended {
    flex-direction: column;
    gap: 6px;
  }
}

.subway-status__status-text {
  font-size: 53px;
  font-weight: 700;
  line-height: 56px;

  &--normal {
    font-size: 34px;
    font-weight: 400;
  }
}

.subway-status__location-text {
  font-size: 34px;
  line-height: 42px;
}

.subway-status__route-pill {
  display: inline-flex;
  overflow: hidden;

  &--blue {
    --pill-color: #{colors.$line-blue};
  }

  &--green {
    --pill-color: #{colors.$line-green};
  }

  &--red {
    --pill-color: #{colors.$line-red};
  }

  &--orange {
    --pill-color: #{colors.$line-orange};
  }

  &__main,
  &__branch {
    box-sizing: border-box;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 55px;
    font-weight: 700;
    color: white;
    background-color: var(--pill-color);
  }

  &__main {
    min-width: 136px;
    height: 72px;
    border-radius: 36px;
  }

  &__branch {
    min-width: 84px;
    height: 84px;
    margin: -6px -6px -6px -28px;
    border: 6px solid colors.$warm-neutral-90;
    border-radius: 42px;

    &:nth-child(n + 3) {
      margin-left: -14px;
    }
  }
}

